# syncwatch

./: encode_sample.sh
frontend/: build.sh  index.html  index.ts  watch.sh
syncwatch-backend/: Cargo.toml
syncwatch-backend/src/: config.rs  cors.rs  events.rs  main.rs  player.rs
