[package]
name = "syncwatch-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.16", features=["json", "ws", "headers"]}
clap = { version = "4.0.12", features = ["derive"] }
serde = {versoin = "1.0.145", features=["derive"]}
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
